samples/_failures_safe/1761448265_a4cee2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_502ba39d.c: In function ‘main’:
./samples/SAFE/__tmp_502ba39d.c:143:27: error: missing terminating " character
  143 |         choice = read_int("Choose operation (1-6):
      |                           ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_502ba39d.c:143:9: error: expected expression at end of input
  143 |         choice = read_int("Choose operation (1-6):
      |         ^~~~~~
./samples/SAFE/__tmp_502ba39d.c:143:18: error: too few arguments to function ‘read_int’
  143 |         choice = read_int("Choose operation (1-6):
      |                  ^~~~~~~~
./samples/SAFE/__tmp_502ba39d.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_502ba39d.c:143:9: error: expected declaration or statement at end of input
  143 |         choice = read_int("Choose operation (1-6):
      |         ^~~~~~
./samples/SAFE/__tmp_502ba39d.c:143:9: error: expected declaration or statement at end of input
